@@ -3,6 +3,7 @@
  * ----START-LICENCE----
  * Copyright 1999,2000,2001 BrightStation PLC
  * Copyright 2002 Ananova Ltd
+ * Copyright 2002 Olly Betts
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License as
@@ -41,6 +42,8 @@
 #include <sys/wait.h>
 #ifdef TIMING_PATCH
 #include <sys/time.h>
+
+using namespace std;
 
 #define uint64_t unsigned long long
 #endif /* TIMING_PATCH */
@@ -142,7 +145,7 @@ TcpServer::get_connected_socket()
 
     if (hent == 0) {
 	close(con_socket);
-	std::string errmsg = "gethostbyaddr: ";
+	string errmsg = "gethostbyaddr: ";
 	switch(h_errno) {
 	    case HOST_NOT_FOUND:
 		errmsg += "Unknown host";
@@ -167,11 +170,11 @@ TcpServer::get_connected_socket()
     }
 
     if (verbose) {
-	std::cout << "Connection from " << hent->h_name << ", port " <<
+	cout << "Connection from " << hent->h_name << ", port " <<
 #ifndef TIMING_PATCH
-	    remote_address.sin_port << std::endl;
+	    remote_address.sin_port << endl;
 #else /* TIMING_PATCH */
-	    remote_address.sin_port << ". (tcpserver.cc)" << std::endl;
+	    remote_address.sin_port << ". (tcpserver.cc)" << endl;
 #endif /* TIMING_PATCH */
     }
 
@@ -192,7 +195,7 @@ TcpServer::run_once()
     // record start time
     int returnval = gettimeofday(&stp,NULL);
     if (returnval != 0) {
-	std::cerr << "Could not get time of day...\n";
+	cerr << "Could not get time of day...\n";
     }
 #endif /* TIMING_PATCH */
     int pid = fork();
@@ -211,23 +214,23 @@ TcpServer::run_once()
 #endif /* TIMING_PATCH */
 	    sserv.run();
 	} catch (const OmError &err) {
-	    std::cerr << "Got exception " << err.get_type()
-		 << ": " << err.get_msg() << std::endl;
+	    cerr << "Got exception " << err.get_type()
+		 << ": " << err.get_msg() << endl;
 	} catch (...) {
 	    // ignore other exceptions
 	}
 	close(connected_socket);
 
 #ifndef TIMING_PATCH
-	if (verbose) std::cout << "Closing connection.\n";
+	if (verbose) cout << "Closing connection.\n";
 #else /* TIMING_PATCH */
 	// record end time
 	returnval = gettimeofday(&etp, NULL);
 	if (returnval != 0) {
-	    std::cerr << "Could not get time of day...\n";
+	    cerr << "Could not get time of day...\n";
 	}
 	uint64_t total = ((1000000 * etp.tv_sec) + etp.tv_usec) - ((1000000 * stp.tv_sec) + stp.tv_usec);
-	if (verbose) std::cout << "Connection held open for " <<  total << " usecs. (tcpserver.cc)\n\n";
+	if (verbose) cout << "Connection held open for " <<  total << " usecs. (tcpserver.cc)\n\n";
 #endif /* TIMING_PATCH */
 	exit(0);
     } else if (pid > 0) {
@@ -258,13 +261,16 @@ TcpServer::run()
     while (1) {
 	try {
 	    run_once();
+	} catch (const OmDatabaseModifiedError &) {
+	    cerr << "Database modified - calling db.reopen()" << endl;
+	    db.reopen();
 	} catch (const OmError &err) {
 	    // FIXME: better error handling.
-	    std::cerr << "Caught " << err.get_type()
-		      << ": " << err.get_msg() << std::endl;
+	    cerr << "Caught " << err.get_type()
+		 << ": " << err.get_msg() << endl;
 	} catch (...) {
 	    // FIXME: better error handling.
-	    std::cerr << "Caught exception." << std::endl;
+	    cerr << "Caught exception." << endl;
 	}
     }
 }
